# construccion-compilador

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  ejemplos.json  package-lock.json  package.json
.github/workflows/: rust.yml  web.yml
site/: bootstrap.js  index.css  index.html  index.js  package-lock.json  package.json
site-react/: .gitignore  README.md  config-overrides.js  package-lock.json  package.json
site-react/public/: index.html
site-react/src/: App.js  firebase.js  index.css  index.js  parseAst.js
site-react/src/components/: Auth.js  Editor.js  Home.js  Login.js  Private.js  SignUp.js
site-react/src/components/TopBar/: TopBar.js
site-react/src/components/TreeView/: TreeView.js
site-react/src/components/routes/: PrivateRoute.js  PublicRoute.js  index.js
site-react/src/pkg/: README.md  frd_lisp.d.ts  frd_lisp.js  frd_lisp_bg.js  frd_lisp_bg.wasm  frd_lisp_bg.wasm.d.ts  package.json
site/js/: elements.js  index.js
src/: ast.rs  env.rs  eval.rs  grammar.lalrpop  intrinsics.rs  lexer.rs  lib.rs  lisp_type.rs  lisp_value.rs  main.rs  parser.rs  tok.rs  token.rs  wasm.rs
tests/: basics.rs  fib.flp  hofs.flp  id.flp  integration.rs  lexer.rs  parser.rs  parser_test.rs  token.rs  variadic_functions.flp
