[package]
name = "frd_lisp"
version = "0.1.0"
authors = ["Fran Guijarro <franleplant@gmail.com>"]
edition = "2018"
build = "build.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[lib]
name = "frd_lisp"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "frd_lisp_bin"
path = "src/bin/main.rs"

[build-dependencies]
lalrpop = { version = "0.19.5", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.19.5"
regex = "1"
log = "0.4.14"
env_logger = "0.8.3"
wasm-bindgen = { version = "0.2", optional = true }
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = "0.3"
