[package]
name = "frd_lisp"
version = "0.1.0"
authors = ["Fran Guijarro <franleplant@gmail.com>"]
edition = "2018"
build = "build.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[lib]
name = "frd_lisp"
crate-type = ["rlib", "cdylib"]

[build-dependencies]
lalrpop = { version = "0.19.7", features = ["lexer"] }

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1.5"
log = "0.4.14"
env_logger = "0.9.0"
wasm-bindgen = { version = "0.2", optional = true }
thiserror = "1.0"
logos = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = "0.3"
